mobile layout adjustments

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <button href="contact.html" class="hidden md:block text-nowrap bg-blue-900 text-white px-2 py-2 rounded cursor-pointer">Contact us</button>
     </nav>
     <section class="h-[70vh] flex justify-center items-center overflow-hidden relative">
-        <div class="bg-[url(./images/co-working-people-working-together.jpg)] absolute bg-no-repeat bg-center bg-cover h-[70vh] absolute bottom-0 w-full"> </div>
+        <div class="bg-[url(./images/co-working-people-working-together.jpg)] absolute bg-no-repeat bg-cover h-[70vh] absolute bottom-0 w-full"> </div>
         <!-- <img class="absolute top-0 w-full " src="images/co-working-people-working-together.jpg" /> -->
         <div class="w-full h-full bg-gradient-to-t from-[#1052B5]/[0.6] to-blue-500/[0.1] absolute"></div>
         <h1 class="p-6 text-white font-light font-serif text-6xl relative mt-32">Excellence through  teamwork</h1>
