--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     <section id="profile" class=" flex justify-center gap-20 p-12"> 
        
     </section>
-    <div class="flex justify-center p-12 gap-20">
+    <div class="flex flex-wrap justify-center p-12 gap-20">
         <form class="max-w-md ">
         <h1 id="slide-up" class="font-serif text-left text-[#081329] overflow-hidden font-bold text-4xl mb-20">Dont wait have <br/> your rights enforced</h1>
         <h3 class="text-lg font-bold mb-2">Send a message</h3>
@@ -82,12 +82,12 @@
         <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
       </form>
       <div >
-        <div class="w-32 h-32 mb-8" ></div>
+        <div class="w-32 h-32 mb-8 hidden sm:block" ></div>
   
         <h3 class="font-bold text-lg ">Call us</h3>
         <p class="text-gray-500 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
-        <div class="flex mb-6">
-             <div class="flex mr-6">
+        <div class="flex flex-wrap mb-6">
+            <div class="flex mr-6 mb-2">
             <svg class="mr-2" width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="11.5" cy="11.5" r="11.5" fill="#A7CAFF"/>
                 <g clip-path="url(#clip0_539_524)">
@@ -165,9 +165,9 @@
 
       </div>
     </div>
-    <div class="flex gap-14 p-10">
-        <div class="w-1/2 h-[30rem] rounded-xl overflow-hidden"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
-        <div class="w-1/2 h-[30rem] rounded-xl overflow-hidden"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
+    <div class="flex flex-wrap gap-14 p-6 md:p-10">
+        <div class="w-full md:w-1/2 h-[30rem] rounded-xl overflow-hidden"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
+        <div class="w-full md:w-1/2 h-[30rem] rounded-xl overflow-hidden"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
     </div>
 
     <footer class="bg-[#081329]">
