spell check website copy

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,8 @@
     </section>
     <div class="flex flex-wrap justify-center p-12 gap-20">
         <form class="max-w-md ">
-        <h1 id="slide-up" class="font-serif text-left text-[#081329] overflow-hidden font-bold text-4xl mb-20">Dont wait have <br/> your rights enforced</h1>
+        <h1 id="slide-up" class="font-serif text-left text-[#081329] overflow-hidden font-bold text-4xl mb-20">Don't wait to have<br> your rights enforced
+            </h1>
         <h3 class="text-lg font-bold mb-2">Send a message</h3>
         <p class="text-gray-500 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <div class="grid md:grid-cols-2 md:gap-6">
@@ -89,7 +90,7 @@
         <div class="w-32 h-32 mb-8 hidden sm:block" ></div>
   
         <h3 class="font-bold text-lg ">Call us</h3>
-        <p class="text-gray-500 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+
         <div class="flex flex-wrap mb-6">
             <div class="flex mr-6 mb-2">
             <svg class="mr-2" width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -125,7 +126,7 @@
        
         <h3 class="font-bold text-lg mb-2">Offices</h3>
         <div class="flex mb-2">
-            <svg class="mr-2 w-10" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="mr-2 w-6" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="11.5" cy="11.5" r="11.5" fill="#A7CAFF"/>
                 <g clip-path="url(#clip0_543_530)">
                 <path d="M12.6172 18.65C13.9531 16.8945 17 12.6398 17 10.25C17 7.35156 14.7604 5 12 5C9.23958 5 7 7.35156 7 10.25C7 12.6398 10.0469 16.8945 11.3828 18.65C11.7031 19.0684 12.2969 19.0684 12.6172 18.65ZM12 8.5C12.442 8.5 12.866 8.68437 13.1785 9.01256C13.4911 9.34075 13.6667 9.78587 13.6667 10.25C13.6667 10.7141 13.4911 11.1592 13.1785 11.4874C12.866 11.8156 12.442 12 12 12C11.558 12 11.134 11.8156 10.8215 11.4874C10.5089 11.1592 10.3333 10.7141 10.3333 10.25C10.3333 9.78587 10.5089 9.34075 10.8215 9.01256C11.134 8.68437 11.558 8.5 12 8.5Z" fill="#1157DF"/>
