--- a/index.html
+++ b/index.html
@@ -316,7 +316,8 @@
     </section>
 
     <section class="p-6 md:p-12 bg-gray-50">
-      <h2 class="mb-4 font-serif text-3xl text-[#081329] text-center m-auto mb-8">What our customer say about us.</h2> 
+      <h2 class="mb-4 font-serif text-3xl text-[#081329] text-center m-auto mb-8">What our customers say about us.
+      </h2> 
       
           <!-- Swiper -->
       <div class="swiper mySwiper">
