spell check website copy

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </svg>
     </div>
       <p  id="preloaderText" class="text-white text-xl overflow-hidden block"><span class="block">Sacia Anderson Cousins</span></p>
-      <p id="preloaderText" class="text-white mb-10 overflow-hidden block"><span class="block">Attormey-At-Law</span></p>
+      <p id="preloaderText" class="text-white mb-10 overflow-hidden block"><span class="block">Attorney-At-Law</span></p>
       <div id="preloaderBar" class="w-1/4 bg-gray-200 rounded-full h-2.5 mb-4 dark:bg-gray-700 overflow-hidden">
         <div class="w-0 bg-gray-600 h-2.5 rounded-full dark:bg-gray-300 prgressBar" id="prgressBar"></div>
       </div>
