fix contact button

--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
               Contact</a></li>
               
           </ul>
-        <button href="contact.html" class="hidden md:block text-nowrap bg-blue-900 text-white px-2 py-2 rounded cursor-pointer">Contact us</button>
-    </nav>
+          <button  class="hidden md:block text-nowrap bg-blue-900 text-white px-2 py-2 rounded cursor-pointer"><a href="contact.html">Contact us</a></button>
+        </nav>
     <section class="h-[70vh] flex justify-center items-center overflow-hidden relative">
         <div class="bg-[url(./images/co-working-people-working-together.jpg)] absolute bg-no-repeat bg-cover h-[70vh] absolute bottom-0 w-full"> </div>
         <!-- <img class="absolute top-0 w-full " src="images/co-working-people-working-together.jpg" /> -->
@@ -93,7 +93,7 @@
                 </ul>
                 <h3 class="text-2xl mb-4 font-normal">My mission</h3>
                 <p class="text-gray-500">My mission is to provide comprehensive legal support to help you navigate your legal challenges and achieve favorable results. Contact me today to discuss how I can assist you in planning and resolving your legal affairs.</p>
-                <button href="contact.html"  class="rounded-md flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium text-sm px-5 py-2.5 text-center mt-8 mb-2 ">Schedule a consultation<svg class="fill-white ml-2 w-4" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g id="icomoon-ignore"></g><path d="M118.627 438.627l265.373-265.372v114.745c0 17.673 14.327 32 32 32s32-14.327 32-32v-192c0-12.942-7.797-24.611-19.754-29.563-3.962-1.642-8.121-2.42-12.246-2.419v-0.018h-192c-17.673 0-32 14.327-32 32 0 17.674 14.327 32 32 32h114.745l-265.372 265.373c-6.249 6.248-9.373 14.438-9.373 22.627s3.124 16.379 9.373 22.627c12.496 12.497 32.758 12.497 45.254 0z"></path></svg></button>
+                <button  class=" mt-4 rounded-md flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 "><a href="contact.html">Schedule a consultation</a><svg class="fill-white ml-2 w-4" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g id="icomoon-ignore"></g><path d="M118.627 438.627l265.373-265.372v114.745c0 17.673 14.327 32 32 32s32-14.327 32-32v-192c0-12.942-7.797-24.611-19.754-29.563-3.962-1.642-8.121-2.42-12.246-2.419v-0.018h-192c-17.673 0-32 14.327-32 32 0 17.674 14.327 32 32 32h114.745l-265.372 265.373c-6.249 6.248-9.373 14.438-9.373 22.627s3.124 16.379 9.373 22.627c12.496 12.497 32.758 12.497 45.254 0z"></path></svg></button>
 
             </div>
             
