--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
               Contact</a></li>
               
           </ul>
-        <button href="contact.html" class="hidden md:block text-nowrap bg-blue-900 text-white px-2 py-2 rounded cursor-pointer">Contact us</button>
-    </nav>
+          <button  class="hidden md:block text-nowrap bg-blue-900 text-white px-2 py-2 rounded cursor-pointer"><a href="contact.html">Contact us</a></button>
+        </nav>
     <section id="profile" class=" flex justify-center gap-20 p-12"> 
        
     </section>
