--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Contact</a></li>
             
         </ul>
-      <button href="contact.html" class="hidden md:block text-nowrap bg-blue-900 text-white px-2 py-2 rounded cursor-pointer">Contact us</button>
+      <button  class="hidden md:block text-nowrap bg-blue-900 text-white px-2 py-2 rounded cursor-pointer"><a href="contact.html">Contact us</a></button>
   </nav>
 
   <section id="profile" class=" relative bg-[#9ac0f9] bg-cover bg-centern h-screen flex flex-col justify-between relative truncate"> 
@@ -83,7 +83,7 @@
               <strong class=" text-white relative">trusted <svg class="absolute right-4 top-8" width="80" height="13" viewBox="0 0 187 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 5.51736C64.411 5.51736 123.038 3.298 182.471 8.05266" stroke="#F09F25" stroke-width="9" stroke-linecap="round"/></svg>
               </strong>legal partner.</h2></span>
             <div class="overflow-hidden">
-              <button href="contact.html"  class="rounded-md flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 ">Schedule a consultation<svg class="fill-white ml-2 w-4" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g id="icomoon-ignore"></g><path d="M118.627 438.627l265.373-265.372v114.745c0 17.673 14.327 32 32 32s32-14.327 32-32v-192c0-12.942-7.797-24.611-19.754-29.563-3.962-1.642-8.121-2.42-12.246-2.419v-0.018h-192c-17.673 0-32 14.327-32 32 0 17.674 14.327 32 32 32h114.745l-265.372 265.373c-6.249 6.248-9.373 14.438-9.373 22.627s3.124 16.379 9.373 22.627c12.496 12.497 32.758 12.497 45.254 0z"></path></svg></button>
+              <button  class="rounded-md flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 "><a href="contact.html">Schedule a consultation</a><svg class="fill-white ml-2 w-4" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g id="icomoon-ignore"></g><path d="M118.627 438.627l265.373-265.372v114.745c0 17.673 14.327 32 32 32s32-14.327 32-32v-192c0-12.942-7.797-24.611-19.754-29.563-3.962-1.642-8.121-2.42-12.246-2.419v-0.018h-192c-17.673 0-32 14.327-32 32 0 17.674 14.327 32 32 32h114.745l-265.372 265.373c-6.249 6.248-9.373 14.438-9.373 22.627s3.124 16.379 9.373 22.627c12.496 12.497 32.758 12.497 45.254 0z"></path></svg></button>
             </div>
         </div> 
         <a href='contact.html' class="hidden md:flex md:bg-[#081329] text-[#9ac0f9] h-28 w-20 md:w-52 flex items-center justify-center rounded-l-full overflow-hidden" id="loactionBar">
