contact page images

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
   
         <h3 class="font-bold text-lg ">Call us</h3>
 
-        <div class="flex flex-wrap mb-6">
+        <div class="flex flex-wrap mb-6 text-gray-600">
             <div class="flex mr-6 mb-2">
             <svg class="mr-2" width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="11.5" cy="11.5" r="11.5" fill="#A7CAFF"/>
@@ -107,7 +107,7 @@
                 
             (876) 715-4463
         </div>
-        <div class="flex">
+        <div class="flex text-gray-600">
             <svg class="mr-2" width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="11.5" cy="11.5" r="11.5" fill="#A7CAFF"/>
                 <g clip-path="url(#clip0_539_524)">
