--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <li class="text-lg list-disc">Application for land title</li>
           <li class="text-lg list-disc">Adding or removing name from title</li>
           <li class="text-lg list-disc">Lost title application</li>
-          <li class="text-lg list-disc">Application to note the death of a joint proprietor</li>
+          <li class="text-lg list-disc">Application to note the death of a <br>joint proprietor</li>
         </ul> 
         </div>
         <div class="relative"> 
@@ -369,9 +369,10 @@
           <div class="swiper-slide">
             <figure class="h-64 flex flex-col items-center justify-center p-6 text-center bg-white rounded-t-lg md:rounded-t-none md:rounded-ss-lg drop-shadow-lg">
               <blockquote class="max-w-2xl mx-auto mb-2 text-gray-500 lg:mb-8 flex flex-col items-center">
-                  <h3 class="text-lg font-semibold text-gray-900">Marc Ellis</h3>  
-                  <div class="rounded-full bg-[url('./images/unnamed(4).png')] h-10 w-10 bg-center bg-cover"></div>
-                  <p class="text-xs  ">Ms. Sacia Anderson is undoubtedly one of the best attorneys I have met. She is extremely hardworking and very focused.</p>
+                  <h3 class="text-lg font-semibold text-gray-900">Basil Downer</h3>  
+                  <div class="rounded-full bg-[url('./images/b-review.png')] h-10 w-10 bg-center bg-cover"></div>
+                  <p class="text-xs">Sacia Anderson and staff performed beyond my expectations, both in person and through overseas communication.
+                    The fees were reasonable and work performed in a timely manner.</p>
                 </blockquote>
                 <div class="w-28 flex">
                     <svg class="fill-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
@@ -385,9 +386,9 @@
           <div class="swiper-slide">
             <figure class="h-64 flex flex-col items-center justify-center p-6 text-center bg-white rounded-t-lg md:rounded-t-none md:rounded-ss-lg drop-shadow-lg">
               <blockquote class="max-w-2xl mx-auto mb-2 text-gray-500 lg:mb-8 flex flex-col items-center">
-                  <h3 class="text-lg font-semibold text-gray-900">Marc Ellis</h3>  
-                  <div class="rounded-full bg-[url('./images/unnamed(4).png')] h-10 w-10 bg-center bg-cover"></div>
-                  <p class="text-xs  ">Ms. Sacia Anderson is undoubtedly one of the best attorneys I have met. She is extremely hardworking and very focused.</p>
+                  <h3 class="text-lg font-semibold text-gray-900">Deandra Jeanpierre</h3>  
+                  <div class="rounded-full bg-[url('./images/d-review.png')] h-10 w-10 bg-center bg-cover"></div>
+                  <p class="text-xs ">She is very unprofessional. Have no sense of direction I wouldn’t recommend her.</p>
                 </blockquote>
                 <div class="w-28 flex">
                     <svg class="fill-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
