--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
               <strong class=" text-white relative">trusted <svg class="absolute right-4 top-8" width="80" height="13" viewBox="0 0 187 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 5.51736C64.411 5.51736 123.038 3.298 182.471 8.05266" stroke="#F09F25" stroke-width="9" stroke-linecap="round"/></svg>
               </strong>legal partner.</h2></span>
-            <div class="overflow-hidden">
+            <div class="overflow-hidden animate-bounce ">
               <button  class="rounded-md flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase"><a class="font-bold" href="contact.html">Schedule a consultation</a><svg class="fill-white ml-2 w-4" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g id="icomoon-ignore"></g><path d="M118.627 438.627l265.373-265.372v114.745c0 17.673 14.327 32 32 32s32-14.327 32-32v-192c0-12.942-7.797-24.611-19.754-29.563-3.962-1.642-8.121-2.42-12.246-2.419v-0.018h-192c-17.673 0-32 14.327-32 32 0 17.674 14.327 32 32 32h114.745l-265.372 265.373c-6.249 6.248-9.373 14.438-9.373 22.627s3.124 16.379 9.373 22.627c12.496 12.497 32.758 12.497 45.254 0z"></path></svg></button>
             </div>
         </div> 
@@ -300,13 +300,19 @@
       <table class="w-full md:w-2/3 shadow-blue-700">
         <tr class="bg-blue-900 text-white p-4"> 
           <td class="p-4">#001</td>
-          <td>Jhon vs Jane</td>
-          <td>2014</td>
+          <td>Lucinda Gordon v Elizabeth richard</td>
+          <td>2024</td>
+          <td><a href="./images/lucinda-v-elizabeth.pdf" download>
+            <svg class="w-7 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 242.7-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7 288 32zM64 352c-35.3 0-64 28.7-64 64l0 32c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-32c0-35.3-28.7-64-64-64l-101.5 0-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352 64 352zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/></svg>
+          </a></td>
         </tr>
         <tr class="bg-white">
-          <td class="p-4">#001</td>
-          <td>Jhon vs Jane</td>
-          <td>2014</td>
+          <td class="p-4">#002</td>
+          <td>Angella Webster v Francine smith</td>
+          <td>2023</td>
+          <td><a href="./images/Angella-v-smith.pdf" download>
+            <svg class="w-8 fill-blue-800" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --><path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 242.7-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7 288 32zM64 352c-35.3 0-64 28.7-64 64l0 32c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-32c0-35.3-28.7-64-64-64l-101.5 0-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352 64 352zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/></svg>
+          </a></td>
         </tr>
       </table>
     </section>
