accordian section update

--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sacia Anderson legal</title>
+    <link rel="icon" type="image/x-icon" href="./images/logo-blue.svg">
     <link rel="stylesheet" href="./style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -92,8 +94,9 @@
 
                 </ul>
                 <h3 class="text-2xl mb-4 font-normal">My mission</h3>
-                <p class="text-gray-500">My mission is to provide comprehensive legal support to help you navigate your legal challenges and achieve favorable results. Contact me today to discuss how I can assist you in planning and resolving your legal affairs.</p>
-                <button ><a class=" mt-8 rounded-md flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase font-bold" href="contact.html">Schedule a consultation</a><svg class="fill-white ml-2 w-4" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g id="icomoon-ignore"></g><path d="M118.627 438.627l265.373-265.372v114.745c0 17.673 14.327 32 32 32s32-14.327 32-32v-192c0-12.942-7.797-24.611-19.754-29.563-3.962-1.642-8.121-2.42-12.246-2.419v-0.018h-192c-17.673 0-32 14.327-32 32 0 17.674 14.327 32 32 32h114.745l-265.372 265.373c-6.249 6.248-9.373 14.438-9.373 22.627s3.124 16.379 9.373 22.627c12.496 12.497 32.758 12.497 45.254 0z"></path></svg></button>
+                <p class="text-gray-500">My mission is to provide comprehensive legal support to help you navigate your legal challenges and achieve favorable results.</p>
+                <button ><a class=" my-8 rounded-md flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium text-sm px-5 py-2.5 text-center  uppercase font-bold" href="contact.html">Schedule a consultation</a></button>
+                <p class="text-gray-500">Contact me today to discuss how I can assist you in planning and resolving your legal affairs.</p>
 
             </div>
             
@@ -122,7 +125,7 @@
                 <path d="M46.1785 39.2548L31.9709 0.0922763L31.9358 0H30.2118L26.8917 9.14283L23.3386 18.954L20.462 26.8723L16.1696 38.7012L15.9691 39.2548L15.5356 40.4444H20.0184C21.4702 40.4448 22.9079 40.1604 24.2492 39.6075C25.5905 39.0546 26.8092 38.2441 27.8356 37.2222C28.8621 36.2004 29.6762 34.9872 30.2314 33.6521C30.7865 32.317 31.072 30.8861 31.0713 29.4411C31.0713 29.1394 31.0588 28.8426 31.0362 28.5483C30.8782 26.6524 30.2304 24.8294 29.1556 23.2562C28.0808 21.6831 26.6155 20.4133 24.9021 19.5701L27.7838 11.6218L37.8118 39.2573H33.4643V40.4469H49V39.2548H46.1785ZM26.2928 33.0199C26.2928 36.4691 23.083 39.2548 19.1214 39.2548C18.6759 39.2578 18.2309 39.2244 17.7908 39.1551L21.6346 28.5558L22.0506 27.4584C22.023 27.3936 21.993 27.3312 21.9629 27.2689L22.1007 27.3213C22.8471 27.6153 23.5397 28.0298 24.1504 28.5483C24.812 29.0922 25.3464 29.7732 25.7164 30.5438C26.0864 31.3143 26.2831 32.156 26.2928 33.01V33.0199Z" fill="white"/>
                 <path d="M24.832 -0.000239497L24.2006 1.74553L24.0151 2.24432C21.6576 0.762417 18.9229 -0.0164768 16.1345 -0.000239497C15.6334 -0.000239497 15.1381 0.0238687 14.6486 0.0720851C7.76783 0.747947 2.39049 6.0476 2.39049 12.4895C2.39049 16.1182 4.0944 19.3853 6.81314 21.6672C7.74861 22.4518 8.78512 23.1085 9.89522 23.62C10.0857 23.7098 10.2811 23.7971 10.4791 23.8694C11.1109 24.1292 11.7608 24.3434 12.4235 24.5103L15.6184 25.3882L14.6161 28.1316L14.4707 28.5306L12.2281 34.7181L11.5716 36.5237L11.0704 37.9153C7.82797 36.798 5.52519 33.9175 5.52519 30.5233C5.52452 29.8558 5.61472 29.1914 5.7933 28.548H4.31491L0 40.4442H1.29798C1.49071 39.9483 1.84319 39.5299 2.30028 39.2546C2.95275 38.8519 3.70765 38.6442 4.47528 38.656C4.83595 38.6549 5.19537 38.6985 5.54523 38.7857L11.9524 40.4417L12.7142 38.3368L12.8921 37.8505L16.7936 27.0991L17.2496 25.8521L17.5879 24.9218L18.089 23.5128L19.9257 18.4475L19.9408 18.4076L26.6261 -0.000239497H24.832ZM18.3171 17.9562C16.5324 17.4417 14.776 16.8349 13.055 16.1381C12.6889 16.012 12.3322 15.8603 11.9875 15.6842H11.9524C11.0769 15.2459 10.2875 14.6546 9.62209 13.9385C8.43922 12.6908 7.77647 11.0426 7.76783 9.32715C7.76783 5.98525 10.3387 3.15212 13.8468 2.27923C14.595 2.09239 15.3632 1.99692 16.1345 1.99492C18.9635 1.99492 21.4643 3.2419 22.9778 5.11237L18.3171 17.9562Z" fill="white"/>
                 </svg>
-                <p class="font-serif text-white text-base overflow-hidden block"><span class="block">Sacia Anderson Cousins</span></p>
+                <p class="font-serif text-white text-base overflow-hidden block"><span class="block">Sacia Anderson- Cousins</span></p>
                 <p class="text-white text-sm mb-10 overflow-hidden block"><span class="block">Attorney-At-Law</span></p>
               </div>
                 
