--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
+    <title>Sacia Anderson legal</title>
+    <link rel="icon" type="image/x-icon" href="./images/logo-blue.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -171,7 +173,7 @@
     </div>
     <div class="flex flex-wrap justify-center gap-14 p-6 md:p-10">
         <div class="w-full md:w-2/5 h-[30rem] rounded-xl overflow-hidden"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3794.4013472199695!2d-76.79929469999999!3d18.006568299999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8edb3fb9d1ec7331%3A0xc02f34b878f232d8!2s19%20Cargill%20Ave%2C%20Kingston!5e0!3m2!1sen!2sjm!4v1727909787101!5m2!1sen!2sjm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe></div>
-        <div class="w-full md:w-2/5 h-[30rem] rounded-xl overflow-hidden"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
+        <div class="w-full md:w-2/5 h-[30rem] rounded-xl overflow-hidden"><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3790.6160053085464!2d-76.46281812481654!3d18.18159478284737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDEwJzUzLjciTiA3NsKwMjcnMzYuOSJX!5e0!3m2!1sen!2sjm!4v1728667453274!5m2!1sen!2sjm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
 
     <footer class="bg-[#081329]">
