kingston office address updated

--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
                 </clipPath>
                 </defs>
             </svg>
-            <p class="text-gray-500">Kingston office comming soon</p>
+            <p class="text-gray-500">19 Cargill Ave</p>
         </div>
 
      
