--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sacia Anderson legal</title>
-    <link rel="icon" type="image/x-icon" href="./images/logo-blue.svg">
+    <link rel="icon" type="image/x-icon" href="./images/logo-lightblue.png">
     <link rel="stylesheet" href="./style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
