--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
     <title>Sacia Anderson legal</title>
-    <link rel="icon" type="image/x-icon" href="./images/logo-blue.svg">
+    <link rel="icon" type="image/x-icon" href="./images/logo-lightblue.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
