--- a/contact.html
+++ b/contact.html
@@ -58,19 +58,28 @@
     <section id="profile" class=" flex justify-center gap-20 p-12"> 
        
     </section>
-    <form name="contact" netlify>
+    <form name="contact" method="POST" netlify>
         <p>
-          <label>Name <input type="text" name="name" /></label>
+          <label>Your Name: <input type="text" name="name" /></label>
         </p>
         <p>
-          <label>Email <input type="email" name="email" /></label>
+          <label>Your Email: <input type="email" name="email" /></label>
+        </p>
+        <p>
+          <label>Your Role: <select name="role[]" multiple>
+            <option value="leader">Leader</option>
+            <option value="follower">Follower</option>
+          </select></label>
+        </p>
+        <p>
+          <label>Message: <textarea name="message"></textarea></label>
         </p>
         <p>
           <button type="submit">Send</button>
         </p>
       </form>
     <div class="flex flex-wrap justify-center p-12 gap-20">
-        <form class="max-w-md" name="contact" method="POST" netlify-honeypot="bot-field" netlify> 
+        <form class="max-w-md" name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true" onSubmit="submit"> 
             <p class="hidden">
                 <label>
                   Don’t fill this out if you’re human: <input name="bot-field" />
